{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 161,
  "lineage": "33ad4eb2-2d7b-ca64-7d87-3cf197b80326",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c8db3747bb510ae",
            "arn": "arn:aws:ec2:us-east-1:403113723064:elastic-ip/eipalloc-04c8db3747bb510ae",
            "domain": "vpc",
            "id": "eipalloc-04c8db3747bb510ae",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-13-216-118-129.compute-1.amazonaws.com",
            "public_ip": "13.216.118.129",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jenkins_master-eip"
            },
            "tags_all": {
              "Name": "jenkins_master-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_eips.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ec10929233384c7f",
            "arn": "arn:aws:ec2:us-east-1:403113723064:instance/i-079f117c6574b5e0d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins_master-instance-profile",
            "id": "i-079f117c6574b5e0d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "awsFE",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-024de6e3688a4fade",
            "private_dns": "ip-10-0-1-179.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.179",
            "public_dns": "ec2-13-218-184-244.compute-1.amazonaws.com",
            "public_ip": "13.218.184.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05dedfd6252695733",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d7f432a5008306d0",
            "tags": {
              "Name": "jenkins_master-server"
            },
            "tags_all": {
              "Name": "jenkins_master-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0265fd18cde157a7a"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.jenkins",
            "aws_iam_role.jenkins_ec2",
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403113723064:internet-gateway/igw-0c7080082ba151e44",
            "id": "igw-0c7080082ba151e44",
            "owner_id": "403113723064",
            "tags": {
              "Name": "jenkins_master-igw"
            },
            "tags_all": {
              "Name": "jenkins_master-igw"
            },
            "vpc_id": "vpc-05719e26d69e13d85"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403113723064:route-table/rtb-0ea413c51f539dfcb",
            "id": "rtb-0ea413c51f539dfcb",
            "owner_id": "403113723064",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c7080082ba151e44",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins_master-public-rt"
            },
            "tags_all": {
              "Name": "jenkins_master-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05719e26d69e13d85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main",
            "data.aws_internet_gateway.existing",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085b297d85a0a2117",
            "route_table_id": "rtb-0ea413c51f539dfcb",
            "subnet_id": "subnet-0d7f432a5008306d0"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_internet_gateway.existing",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403113723064:security-group/sg-0265fd18cde157a7a",
            "description": "Allow SSH and outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0265fd18cde157a7a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "App on port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins_master-sg",
            "name_prefix": "",
            "owner_id": "403113723064",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins_master-sg"
            },
            "tags_all": {
              "Name": "jenkins_master-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05719e26d69e13d85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403113723064:subnet/subnet-0d7f432a5008306d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7f432a5008306d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "403113723064",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins_master-public-subnet"
            },
            "tags_all": {
              "Name": "jenkins_master-public-subnet"
            },
            "vpc_id": "vpc-05719e26d69e13d85"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403113723064:vpc/vpc-05719e26d69e13d85",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f54259f053754578",
            "default_route_table_id": "rtb-0da0e08f71d969afd",
            "default_security_group_id": "sg-0b895caa678e1b7d3",
            "dhcp_options_id": "dopt-0b4b0e6a31b00e4ae",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05719e26d69e13d85",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0da0e08f71d969afd",
            "owner_id": "403113723064",
            "tags": {
              "Name": "jenkins_master-vpc"
            },
            "tags_all": {
              "Name": "jenkins_master-vpc"
            }
          }
        }
      ]
    }
  ]
}